Fix: Unnecessary width 100vw casuing horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
 .app-wrapper {
-  width: 100vw;
-  margin: 0 auto;
-
   font-family: Poppins;
 }
 
